# research_scratch

./: .gitignore  README.md
HfOx_polycrystal/polycrytal_workspace/: .gitignore  pyproject.toml
HfOx_polycrystal/polycrytal_workspace/notebooks/010626_final_site_id_from_dio_withO/: 200_select_Gb_oint_indices.txt  analyze_delta_Es.ipynb  bulk_like_envs_viz.ovito  chosen_bulk_env_indices.txt  convert_stripped_to_enriched_xyz.py  fixed_chosen_bulk_env_indices.txt  histograms_and_heatmap.ipynb  histograms_and_heatmap_v2.ipynb  histograms_and_heatmap_v3.ipynb  identify_bulk-like_oints-2.ipynb  identify_bulk-like_oints-3.ipynb  identify_bulk-like_oints.ipynb  radially_resolved_fract_hcp.ipynb  radially_resolved_fract_hcp_ref.ipynb  radially_resolved_fract_hcp_v2.ipynb  radially_resolved_fract_hcp_v3.ipynb  radially_resolved_fract_hcp_v4.ipynb  selected_atom_vizing-1.ovito  selecting_final_set.ipynb  singleOint_vizing.ovito  strip_oxygens.py  viz_selected_with_ovito.ipynb  vizing_weird_two-grain_but-all-hcp.ovito
HfOx_polycrystal/polycrytal_workspace/notebooks/111125_site_identification_attempts/: convert_Hfpolycrystal_dump2xyz.py  grain_1_deep_dive-2.ovito  grain_1_deep_dive.ovito  grain_3_deep-dive.ovito  grain_8_deep-dive.ovito  grain_segmentation_noO_min.ovito  index_mapping.ipynb  index_mapping_verification.ipynb  index_mapping_verification_2.ipynb  isosurface_noO_polycrystal_min_attempt.ovito  nn_validation.ipynb  nn_validation_2.ipynb  ovito_cna_attempt1.ipynb  taking_slices_noO_min.ovito  vesin_attempt1.ipynb  vesin_attempt2.ipynb
HfOx_polycrystal/polycrytal_workspace/notebooks/112525_actual_site_identification/: convert_dump2xyz.ipynb  gb_oint_side_id-1.ipynb  gb_oint_site_id-2.ipynb  gb_oint_site_id-3.ipynb  gb_oint_site_id-4.ipynb  noOidx2orig.json  ovito_pta_segmentation_1.ipynb  ovito_pta_segmentation_2.ipynb  (+9 more)
ft_comparisons/eval-my-mlips/: pyproject.toml
ft_comparisons/eval-my-mlips/dpp_env/: 02_draw_subsets.jl  Manifest.toml  Project.toml  al-al2o3_dpp_trainval_indices_1000.txt  al-al2o3_dpp_trainval_indices_200.txt  al-al2o3_dpp_trainval_indices_400.txt  al-al2o3_dpp_trainval_indices_600.txt  dbg_indices.txt  dpp_utils.jl  get_dpp_trainval_indices.jl  get_dpp_trainval_indices.jl.bck  get_dpp_trainval_indices_al-al2o3.jl  new_dpp_train_indices.txt  new_dpp_validation_indices.txt  small_HfOx_param.pod  train_indices.txt  validation_indices.txt
ft_comparisons/eval-my-mlips/notebooks/: check_vasprun_parser.ipynb  dbg_run-123_train.txt  dbug_ft.yml  initial_mace_tests.ipynb  initial_mace_tests_2.ipynb  initial_mace_tests_3.ipynb  initial_mace_tests_4.ipynb  initial_mace_tests_5.ipynb  initial_mace_tests_6.ipynb  initial_mace_tests_7.ipynb
ft_comparisons/eval-my-mlips/wandb/: latest-run
ft_comparisons/test/: pyproject.toml
uq_expts/splinter_docker_felupe/felupe_env/: .gitignore  main.py  pyproject.toml
(+2657 files in other folders)
