[project]
name = "felupe-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "felupe>=9.5.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "meshio>=5.3.5",
    "pyvista>=0.46.4",
    "trame>=3.12.0",
    "trame-vtk>=2.10.0",
    "trame-vuetify>=3.1.0",
]
